--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -13,10 +13,10 @@ table, caption, tbody, tfoot, thead, tr, th, td
 	list-style: none;
 	text-decoration:none;
 }
-/*a:hover, a:visited, a:active{
+a:hover, a:visited, a:active{
 	color:#ffffff;
 }
-*/
+
 #page-container {
 	background: #f8eedf;
 }
@@ -144,9 +144,9 @@ table, caption, tbody, tfoot, thead, tr, th, td
 	color: #ffffff;
 }
 
-#nav .wrapper ul li a.selected, #nav-content ul li a:hover {
+/*#nav .wrapper ul li a.selected, #nav-content ul li a:hover {
 	color: #2c8897;
-}
+}*/
 
 .search_box {
 	float: right;
