--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -13,7 +13,7 @@ table, caption, tbody, tfoot, thead, tr, th, td
 	list-style: none;
 	text-decoration:none;
 }
-a:hover, a:visited, a:active{
+a{
 	color:#ffffff;
 }
 
